--- a/Algoritmos/Site-Oficial/html/login.html
+++ b/Algoritmos/Site-Oficial/html/login.html
@@ -35,7 +35,7 @@
           <div class="formulario">
             <div class="campo">
               <span>E-mail:</span>
-              <input id="email_input" type="text" placeholder="Digite seu email"><br>
+              <input id="email_input" type="text" placeholder="Digite seu e-mail"><br>
               <div id="divEmail"></div>
             </div>
             <div class="campo">
@@ -84,9 +84,9 @@
       }).showToast();
     }
     else if (!email.includes('@') || !email.includes('.') || email !== email.toLowerCase()) {
-      divEmail.innerHTML = `<span style="color: red;">* Email incorreto.</span>`;
+      divEmail.innerHTML = `<span style="color: red;">* E-mail incorreto.</span>`;
       Toastify({
-      text: "Error: Email incorreto!",
+      text: "Error: E-mail incorreto!",
       duration: 3000,
       style: {
       background: "linear-gradient(to right, #FF0000, #FF4500)",
