Arrumando calculadora e dashboard

--- a/Algoritmos/Site-Oficial/html/calculadora.html
+++ b/Algoritmos/Site-Oficial/html/calculadora.html
@@ -41,10 +41,10 @@
         </div>
 
         <div class="input-style">
-            Digite o nome da sua Empresa:
+            Digite o nome da sua empresa:
             <input type="text" id="input_nome" placeholder="Digite o nome" class="input-type"> <br> <br>
 
-            Digite a quantidade de toneladas armazenado em seus silos:
+            Digite a quantidade de toneladas armazenadas em seus silos:
             <input type="number" id="input_toneladas" placeholder="Digite o valor" class="input-type"> <br> <br>
 
             Digite a cotação da saca de soja atual:
