--- a/Algoritmos/Site-Oficial/html/dashboard.html
+++ b/Algoritmos/Site-Oficial/html/dashboard.html
@@ -42,7 +42,7 @@
                         <div class="grafico-caixa-pai">
 
                         <div class="grafico-caixa1">
-                            <h3 class="tituloDiaria";">Temperatura Diária</h1>
+                            <h3 class="tituloDiaria";">Temperatura diária</h1>
                         <canvas id="Grafico1" class="grafico1"></canvas>
                         </div>
 
@@ -50,7 +50,7 @@
                         <div class="temp-media-atual">
 
                             <div class="grafico-caixa">
-                                <h1 class="tituloAtual">Temperatura Atual</h1>
+                                <h1 class="tituloAtual">Temperatura atual</h1>
                             <h2 class="temp-atual" id="temp_atual">27°C</h2>
                             </div>
 
